messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
  labels:
    app: messaging-app-bg
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app-bg
      color: green
  template:
    metadata:
      labels:
        app: messaging-app-bg
        color: green
        tier: web
    spec:
      containers:
      - name: messaging-app-green-container
        image: alx-messaging-app:v2.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
