messaging_app/messaging_app/deployment.yaml
# 1. Deployment for the Django App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-deployment
  labels:
    app: messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      tier: web
  template:
    metadata:
      labels:
        app: messaging-app
        tier: web
    spec:
      containers:
      - name: messaging-app
        # Define the Docker image
        image: alx-messaging-app:v1.0
        imagePullPolicy: Never 
        ports:
        - containerPort: 8000
---
# --- 2. ClusterIP Service to Expose the Deployment Internally
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
  labels:
    app: messaging-app
    tier: web
spec:
  # ClusterIP is used to keep the service internal, as requested.
  type: ClusterIP 
  selector:
    app: messaging-app
    tier: web
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: http-app
